--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,11 @@
 
  <header class="header">
     <ul>
-      <li><a  routerLink="user" routerLinkActive="active">user</a> </li>
-      <li ><a  routerLink="home" routerLinkActive="active">home</a> </li>
-      <li><a  routerLink="news"routerLinkActive="active">news</a> </li>
+      <li><a  routerLink="/user" routerLinkActive="active">user</a> </li>
+      <li ><a  routerLink="/home" routerLinkActive="active">home</a> </li>
+      <li><a  routerLink="/news"routerLinkActive="active">news</a> </li>
+     
+
     </ul>
 
  </header>
