--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,3 +1,6 @@
 <p>
   news works!
 </p>
+<a  routerLink="/newscontent/1"routerLinkActive="active">news content1</a><br><br>
+<a  routerLink="/newscontent/2"routerLinkActive="active">news content2</a><br><br>
+<a  routerLink="/newscontent/3"routerLinkActive="active">news content3</a><br><br>
