--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       <li><a  routerLink="/user" routerLinkActive="active">user</a> </li>
       <li ><a  routerLink="/home" routerLinkActive="active">home</a> </li>
       <li><a  routerLink="/news"routerLinkActive="active">news</a> </li>
+      <li><a  routerLink="/shop"routerLinkActive="active">shop</a> </li>
      
 
     </ul>
